--- a/english.html
+++ b/english.html
@@ -303,6 +303,8 @@ Error message and password prompt
 
 <li>Children</li>
 
+<li>Chocolate chip cookies</li>
+
 <li>Christmas dinner</li>
 
 <li>Coen sister</li>
@@ -8452,10 +8454,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200217121340733" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217122942251" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217125926227" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8464,7 +8466,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[2 Da Vinci]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8484,7 +8486,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217124914751" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217125900598" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8974,6 +8976,15 @@ Yours- Dandan.
 
 
 
+</pre>
+</div>
+<div created="20200217130014362" modified="20200217130146341" tags="Recipes Baking [[Food addicts]] [[The archive's trustees]] [[The Baumans]]" title="Chocolate chip cookies">
+<pre>
+[img[pictures/chocolate-chips.jpg]]
+
+
+
+ &lt;&lt;heblink [[עוגיות שוקולד צ'יפס]]&gt;&gt;
 </pre>
 </div>
 <div created="20200115162658453" modified="20200115163052944" tags="Meals [[Food addicts]]" title="Christmas dinner">
@@ -9926,18 +9937,18 @@ It seemed like, everything is fine''
 
 </pre>
 </div>
-<div created="20200101125351383" modified="20200101133049907" tags="" title="Papa Yoel">
+<div created="20200101125351383" modified="20200217130117310" tags="" title="Papa Yoel">
 <pre>[img[pictures/aba-vetirza.jpg]]
 
 !!![[Yoyo]]:
 
-Our dad, Yoel Bauman, ever since our mother passed away, comes in one piece with his dear - truly dear- wife,Tirza Bauman, who shows up with a wide smile and great chocolate chip cookies.
+Our dad, Yoel Bauman, ever since [[our mother|RIP Dina]] passed away, comes in one piece with his dear - truly dear- wife,Tirza Bauman, who shows up with a wide smile and great [[chocolate chip cookies|Chocolate chip cookies]].
  
 I really like Tirza, who turned him to a far more tolerable and tolerant man than how he ever used to be.
 
 All and all dad is just another human being who's afraid of this life, and for that, I can't blame anyone.
 
-He did his best at raising us as good people, and in most cases he even succeeded. 
+He did his best at raising [[us|The Baumans]] as good people, and in most cases he even succeeded. 
 
 
 
