--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217124837882" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217125956600" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11644,7 +11644,7 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20170105170620001" modified="20200217125025924" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="גלות">
+<div created="20170105170620001" modified="20200217130213793" tags="[[אירי טוענת]] [[קופים ממונעים]] בתים [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="גלות">
 <pre>[img[pictures/galoot.jpg]]
 
 
@@ -16207,7 +16207,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20180502183518120" modified="20190314145213346" tags="[[משפחת באומן]] [[חיות אוכל]] [[נאמני הגנזך]] מתכונים אפייה" title="עוגיות שוקולד צ'יפס">
+<div created="20180502183518120" modified="20200217130243259" tags="[[משפחת באומן]] [[חיות אוכל]] [[נאמני הגנזך]] מתכונים אפייה" title="עוגיות שוקולד צ'יפס">
 <pre>[img[pictures/chocolate-chips.jpg]]
 
 !!![[יויו וגורה]]:
@@ -16238,7 +16238,10 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 5. מחממים תנור ל 170 מעלות צלזיוס, מרפדים שתי תבניות של התנור בנייר אפייה
 
-6. יוצרים כדורים בקוטר של 2-21/2 סינטמטרים, משטחים אותם מעט, מניחים על נייר האפייה במרחק של 1 סנטימטר בערך אחד מהשני ואופים כ-20 דקות</pre>
+6. יוצרים כדורים בקוטר של 2-21/2 סינטמטרים, משטחים אותם מעט, מניחים על נייר האפייה במרחק של 1 סנטימטר בערך אחד מהשני ואופים כ-20 דקות
+
+
+&lt;&lt;englink [[Chocolate chip cookies]]&gt;&gt;</pre>
 </div>
 <div created="20180516163354756" modified="20190314145226411" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים ילדים אפייה" title="עוגת יום הולדת">
 <pre>[img[pictures/birthday-cake.jpg]]
