--- a/english.html
+++ b/english.html
@@ -477,6 +477,8 @@ Error message and password prompt
 
 <li>Pina Bausch</li>
 
+<li>Powders</li>
+
 <li>Prince</li>
 
 <li>Psychodiagnostic Chirology</li>
@@ -602,6 +604,8 @@ Error message and password prompt
 <li>With Yoyo in Amsterdam</li>
 
 <li>Wyclef Jean</li>
+
+<li>Yehonatan Geffen</li>
 
 <li>Yoyo</li>
 
@@ -8457,7 +8461,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217125926227" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217131109257" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8486,7 +8490,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217125900598" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217131358208" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8634,7 +8638,6 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
 <div created="20200217124916746" modified="20200217125410192" tags="[[Here in the Ghetto]] Metafiction Houses" title="2 Da Vinci">
 <pre>
-
 [img[pictures/da-vinci-2.jpg]]
 
 
@@ -8841,7 +8844,7 @@ Is where I want to be
 
  &lt;&lt;heblink [[ביורק]]&gt;&gt;</pre>
 </div>
-<div created="20200213181607810" modified="20200217121424283" tags="[[On the road to somewhere]] [[Iry and Gura]] [[Dreams we have dreamt]] [[The global village]]" title="blue-marble-hood">
+<div created="20200213181607810" modified="20200217131951872" tags="[[On the road to somewhere]] [[Iry and Gura]] [[The global village]] [[Dreams that we've dreamt]]" title="blue-marble-hood">
 <pre>[img[pictures/blue-marble.jpg]]
 
 
@@ -8914,7 +8917,7 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
  &lt;&lt;heblink [[צ'נג]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215122951144" modified="20200215124616856" tags="[[Dandan went]] Houses [[Dreams we have dreamt]] Laundry [[True stories]]" title="Chez Finnie`s">
+<div created="20200215122951144" modified="20200217132226396" tags="[[Dandan went]] Houses Laundry [[True stories]] [[Dreams that we've dreamt]]" title="Chez Finnie`s">
 <pre>!!![[Yoyo]]:
 
 Couple of days ago, [[we received|Coen Sisters]] a letter from [[Dandan]], after not hearing from him for about a year. I love him so much and I miss him. With his permission, I'm pasting the letter here:
@@ -8979,8 +8982,7 @@ Yours- Dandan.
 </pre>
 </div>
 <div created="20200217130014362" modified="20200217130146341" tags="Recipes Baking [[Food addicts]] [[The archive's trustees]] [[The Baumans]]" title="Chocolate chip cookies">
-<pre>
-[img[pictures/chocolate-chips.jpg]]
+<pre>[img[pictures/chocolate-chips.jpg]]
 
 
 
@@ -9175,10 +9177,10 @@ This is [[David Byrne|http://davidbyrne.com/]].
  &lt;&lt;heblink [[דליקטסן אצל ז'נבייב]]&gt;&gt;
 </pre>
 </div>
-<div created="20200202160144751" modified="20200217121557126" tags="[[The team]] Children" title="Dreams that we've dreamt">
+<div created="20200202160144751" modified="20200217131317059" tags="[[The team]] Children" title="Dreams that we've dreamt">
 <pre>[img[pictures/chalomot-shechalamnoo.jpg]]
 
-&lt;&lt;list-links filter:&quot;[tag[Dreams we have dreamt]]&quot;&gt;&gt;
+&lt;&lt;list-links filter:&quot;[tag[Dreams that we've dreamt]]&quot;&gt;&gt;
 
 
  &lt;&lt;heblink [[חלומות שחלמנו]]&gt;&gt;</pre>
@@ -9991,6 +9993,24 @@ And [[this|https://www.youtube.com/watch?v=WZd2SkydIXA]] is a performance whose 
 
  &lt;&lt;heblink [[פינה באוש]]&gt;&gt;</pre>
 </div>
+<div created="20200217130746048" modified="20200217132147914" tags="[[Food addicts]] Baking [[Dreams that we've dreamt]]" title="Powders">
+<pre>[img[pictures/avkot.jpg]]
+
+!!![[Yoyo]]:
+
+
+Powders are no noways for so many reasons. First of all, they insult the intelligence of the taste busts. Secondly, I assume that they activate false alarm at the cultivators, while those have nothing really to disassemble. Thirdly, they are filled with sugar, minerals, phosphates, cement and [[a kitten who got tangled in his hair|Yehonatan Geffen]].
+ 
+Even though powders are no noways, I use powders once in a while but only what's necessary, minus half of it. For example, baking powder, if you start thinking about it you'll notice that your tongue can distinguish its taste. If you distinguish its taste, it’s a sign there's too much of it. For example, sugar powder. For example pudding mix, I'll use half of what's written. I don't touch artificial sweeteners. Soup powder- I don't touch it. Milk powder- I don’t touch it. I use cocoa powder. I use almond powder. I use wheat powder.
+
+Egg powder? If by any chance you dropped an egg, let it dry, let the cat scratch off what's there, and from what's left make a marble cake.
+
+
+
+
+ &lt;&lt;heblink [[אבקות]]&gt;&gt;
+</pre>
+</div>
 <div created="20200213204850477" modified="20200213212548516" tags="[[Outer sisters]] Music Films" title="Prince">
 <pre>[img[pictures/prince.jpg]]
 
@@ -10671,6 +10691,14 @@ I had doubts regarding [[Wyclef|https://www.imdb.com/name/nm0419889/]], cause he
  &lt;&lt;heblink [[וויקליף ז'אן]]&gt;&gt;
 
 
+</pre>
+</div>
+<div created="20200217131804519" modified="20200217132253478" tags="Music [[Outer sisters]] [[How many songs can you even invent at all]]" title="Yehonatan Geffen">
+<pre>
+[img[pictures/yonatan-gefen.jpg]]
+
+
+ &lt;&lt;heblink [[יהונתן גפן]]&gt;&gt;
 </pre>
 </div>
 <div created="20200101132642919" modified="20200215220155985" tags="" title="Yoyo">
