--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אבקות [[האחיות כהן]]" title="$:/StoryList">
+<div list="אודליה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217132051257" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217132541372" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9567,7 +9567,7 @@ well,
 
 את אבי האחד פגשתי שוב, אחרי שנים רבות שלא נפגשנו. התמונה הזו צולמה [[בנחלה|הנחלה בה גדלתי]] לפני עשרים שנה בערך.</pre>
 </div>
-<div created="20171003162348923" modified="20200217131050249" tags="[[חיות אוכל]] [[חלומות שחלמנו]] אפייה" title="אבקות">
+<div created="20171003162348923" modified="20200217132931725" tags="[[חיות אוכל]] [[חלומות שחלמנו]] אפייה" title="אבקות">
 <pre>[img[pictures/avkot.jpg]]
 
 !!![[יויו]]:
@@ -9580,7 +9580,7 @@ well,
 אבקת ביצים? אם במקרה נפלה לכם ביצה, תנו לה להתייבש, תנו לחתול לגרד את מה שיש, וממה  שנשאר תכינו עוגת שיש.
 
 
-&lt;&lt;englink [[Dreams that we've dreamt]]&gt;&gt;
+&lt;&lt;englink [[Powders]]&gt;&gt;
 
 </pre>
 </div>
