--- a/english.html
+++ b/english.html
@@ -463,6 +463,8 @@ Error message and password prompt
 
 <li>Northern Exposure</li>
 
+<li>Odelia</li>
+
 <li>On the road to somewhere</li>
 
 <li>Once</li>
@@ -8470,7 +8472,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Powders [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8917,7 +8919,7 @@ My admired [[screenwriter and director|https://en.wikipedia.org/wiki/Charlie_Kau
  &lt;&lt;heblink [[צ'נג]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215122951144" modified="20200217132226396" tags="[[Dandan went]] Houses Laundry [[True stories]] [[Dreams that we've dreamt]]" title="Chez Finnie`s">
+<div created="20200215122951144" modified="20200217133224213" tags="[[Dandan went]] Houses Laundry [[True stories]] [[Dreams that we've dreamt]]" title="Chez Finnie`s">
 <pre>!!![[Yoyo]]:
 
 Couple of days ago, [[we received|Coen Sisters]] a letter from [[Dandan]], after not hearing from him for about a year. I love him so much and I miss him. With his permission, I'm pasting the letter here:
@@ -9897,6 +9899,19 @@ In the years I've lived with [[Sheffy|Nano and I]] , she declared one day that [
 &lt;&lt;list-links filter:&quot;[tag[Northern Exposure ]]&quot;&gt;&gt;
 
  &lt;&lt;heblink [[חשיפה לצפון]]&gt;&gt;</pre>
+</div>
+<div created="20200217133031335" modified="20200217133537659" tags="HH" title="Odelia">
+<pre>
+[img[pictures/150crYxBlBOKkAyo.jpg]]
+
+!!![[Gura]]:
+
+Odelia is a K sister who trades art. She dresses super stylish, knows tantra, super-hot, not local, gets everything she wants, single, younger than the others.
+
+
+
+ &lt;&lt;heblink [[אודליה]]&gt;&gt;
+</pre>
 </div>
 <div created="20200212162303735" modified="20200217125156015" tags="[[True stories]] [[Monkeys with car keys]] [[The global village]]" title="On the road to somewhere">
 <pre>[img[pictures/baderech-lean.jpg]]
