--- a/english.html
+++ b/english.html
@@ -447,6 +447,8 @@ Error message and password prompt
 
 <li>Michel Gondry</li>
 
+<li>Misenplation</li>
+
 <li>Monkeys with car keys</li>
 
 <li>Mothers</li>
@@ -506,6 +508,8 @@ Error message and password prompt
 <li>Rushell</li>
 
 <li>Saraleh would have liked it</li>
+
+<li>Scents</li>
 
 <li>Single parent children</li>
 
@@ -8463,7 +8467,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217131109257" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217134849212" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8492,7 +8496,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217131358208" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217134512280" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9722,8 +9726,21 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200202185353882" tags="[[Life according to Genevieve]]" title="Love">
+<div created="20200202180428182" modified="20200217134821020" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
+
+
+!!![[Genevieve]]:
+
+Love is an emotion.
+
+I love many things. I love food. I love the kitchen. I love the kitchenware. The worktops. I love moving around the kitchen. I love ordering raw materials and organizing them. I love deciding what will be a little bit different today than yesterday. I love rearranging the kitchen before cooking, Yoyo calls it [[misenplation|Misenplation]]. I love cutting. I love cooking. I love [[scents|Scents]]. I love looking at everything. Thinking about things. Planning the work. I love the crew, and I love my restaurant. I love living creatures, plant and animal form, but I also love objects. I love [[words|When they said cassette]]. I love the word: noun. Surely I can go on and on writing aboutwhat I love, and I haven't even started with my daughters and my mother and Joseph and Coen Sisters bien sur.
+
+I'm trying to love myself, including my intendent to seethe. 
+ 
+For example, it seethes me when people use words purposelessly, like the word love.
+
+
 
 
  &lt;&lt;heblink [[אהבה]]&gt;&gt;
@@ -9801,6 +9818,16 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 
 
  &lt;&lt;heblink [[מישל גונדרי]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200217134428443" modified="20200217134554888" tags="Kitchens [[The kitchen according to Genevieve]] [[Monkeys with car keys]] Laundry" title="Misenplation">
+<pre>
+[img[pictures/mizonplazya.jpg]]
+
+
+ &lt;&lt;heblink [[מיזונפלציה]]&gt;&gt;
+
 
 </pre>
 </div>
@@ -10171,6 +10198,13 @@ Rosh Hashana 2017 was really something. Meaning, in the end of the day it was gr
 
  &lt;&lt;heblink [[שרלה הייתה אוהבת את זה]]&gt;&gt;
 </pre>
+</div>
+<div created="20200217134743341" modified="20200217134843465" tags="[[The estate]] Houses" title="Scents">
+<pre>
+[img[pictures/reychot.jpg]]
+
+
+ &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
 </div>
 <div created="20200212222159882" modified="20200215134519589" tags="[[True stories]] Children" title="Single parent children">
 <pre>[img[pictures/yeladim-chad.jpg]]
