--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אודליה [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217133452233" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217134728748" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9598,7 +9598,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200202180831455" tags="[[המטבח על פי ז'נבייב]]" title="אהבה">
+<div created="20170112164936113" modified="20200217135015658" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15180,7 +15180,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170112174310883" modified="20200215174725110" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]] כביסה מטבחים" title="מיזונפלציה">
+<div created="20170112174310883" modified="20200217134717224" tags="[[המטבח על פי ז'נבייב]] [[קופים ממונעים]] כביסה מטבחים" title="מיזונפלציה">
 <pre>[img[pictures/mizonplazya.jpg]]
 
 
@@ -15204,6 +15204,8 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 כלומר, מה שאני מנסה לומר הוא - שכאשר הגעתי לעבודה אצל ז'נבייב, והיא אמרה לי, שמה שהיא רוצה ממני זה עזרה במיז-און-פלאס, חיברתי את המילים והבנתי את מה שהיא אמרה.
 
 
+
+&lt;&lt;englink [[Misenplation]]&gt;&gt;
 
 </pre>
 </div>
@@ -18104,7 +18106,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170124175341008" modified="20180704184641281" tags="[[הנחלה בה גדלתי]] בתים" title="ריחות">
+<div created="20170124175341008" modified="20200217135049352" tags="[[הנחלה בה גדלתי]] בתים" title="ריחות">
 <pre>[img[pictures/reychot.jpg]]
 
 !!![[אווה]]:
@@ -18123,9 +18125,7 @@ Fapina''
 
 
 
-
-
-
+&lt;&lt;englink [[Scents]]&gt;&gt;
 
 
 
