--- a/english.html
+++ b/english.html
@@ -251,6 +251,8 @@ Error message and password prompt
 
 <li>2 Da Vinci</li>
 
+<li>420</li>
+
 <li>9-side-wishing-star</li>
 
 <li>A Fairy Tale's Mother</li>
@@ -448,6 +450,8 @@ Error message and password prompt
 <li>Michel Gondry</li>
 
 <li>Misenplation</li>
+
+<li>Miznon</li>
 
 <li>Monkeys with car keys</li>
 
@@ -8467,7 +8471,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217134849212" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217141348601" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8476,7 +8480,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="420 Miznon [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8496,7 +8500,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217134512280" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217141122591" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -8656,6 +8660,14 @@ It isn't nice to see a shutdown radio station, but when you live here in the ghe
  &lt;&lt;heblink [[דה וינצ'י 2]]&gt;&gt;
 
 </pre>
+</div>
+<div created="20200217141431467" modified="20200217142025766" tags="Music [[Here in the Ghetto]] [[A friend]]" title="420">
+<pre>
+[img[pictures/420.jpg]]
+
+[[Rastafrequency|https://www.rastafrequency.co.il/420-shop-tel-aviv-2/]]
+
+ &lt;&lt;heblink [[420]]&gt;&gt;</pre>
 </div>
 <div created="20200115163447032" modified="20200217121354541" tags="Metafiction [[The global village]]" title="9-side-wishing-star">
 <pre>!!![[Eva]]:
@@ -9726,7 +9738,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217134821020" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217141506149" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -9827,6 +9839,22 @@ For example, it seethes me when people use words purposelessly, like the word lo
 
 
  &lt;&lt;heblink [[מיזונפלציה]]&gt;&gt;
+
+
+</pre>
+</div>
+<div created="20200217140255366" modified="20200217141338003" tags="[[Here in the Ghetto]] Restaurants [[Food addicts]] Kitchens" title="Miznon">
+<pre>
+[img[pictures/miznon.jpg]]
+
+
+!!![[Tomer]]:
+
+The [[Miznon|https://miznon.com/]] that's in the picture is on 30 King George, not far from the beloved [[420]]. I wasn't in the ones abroad, nor in the one in Ramat Hahayal, but I was more than once in the Ibn Gabirol's branch. Everything is very tasty inside a pitta and in a reasonable price. I love the chickens' livers and the Lima masbaha the most. [[My Nano|Nano and I]] loves the bananas' line. It's very yummy in [[Eyal Shanni's|https://en.wikipedia.org/wiki/Eyal_Shani]] Miznons and there are also a run over potato, soda or spritz and more on the menu, and music, and lovely employs in the counter or in the open kitchens. A pleasure that is a must.  
+
+
+
+ &lt;&lt;heblink [[מזנון]]&gt;&gt;
 
 
 </pre>
