--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217134728748" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217135122459" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9352,12 +9352,15 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
-<div created="20180802192842799" modified="20180802201110090" tags="[[כאן בגטו]]" title="420">
+<div created="20180802192842799" modified="20200217141632894" tags="[[כאן בגטו]] מוזיקה חבר" title="420">
 <pre>[img[pictures/420.jpg]]
 
 !!![[תומר]]:
 
-[[תדר הראסטה|https://www.rastafrequency.co.il/420-shop-tel-aviv/]] זה מה שמדבר, ו-420 היא החנות הקטנה והמטריפה של המותג. היא נמצאת בקינג-ג'ורג' 30 על בורוכוב 2, והיא חלק ממכלול של עשייה של האנשים האלה, שאני מאד מחבב. יש שם טבק ואביזרי עישון אבל גם מיני חפיצים, ואני תמיד אוהב לקנות שם איזו שרשרת עץ צבעונית של אפריקה או איזה ארנק נחמד [[לפרח|גן-יה]], או דבר מה יפה אחר, ולדבר עם המוכר.</pre>
+[[תדר הראסטה|https://www.rastafrequency.co.il/420-shop-tel-aviv/]] זה מה שמדבר, ו-420 היא החנות הקטנה והמטריפה של המותג. היא נמצאת בקינג-ג'ורג' 30 על בורוכוב 2, והיא חלק ממכלול של עשייה של האנשים האלה, שאני מאד מחבב. יש שם טבק ואביזרי עישון אבל גם מיני חפיצים, ואני תמיד אוהב לקנות שם איזו שרשרת עץ צבעונית של אפריקה או איזה ארנק נחמד [[לפרח|גן-יה]], או דבר מה יפה אחר, ולדבר עם המוכר.
+
+
+&lt;&lt;englink [[420]]&gt;&gt;</pre>
 </div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
@@ -9598,7 +9601,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217135015658" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217141619551" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -15117,12 +15120,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 היאת [[והספרית|הספרית]] הן המבוגרות האחראיות בסיפור.
 </pre>
 </div>
-<div created="20190204104349203" modified="20190617134233383" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] מטבחים" title="מזנון">
+<div created="20190204104349203" modified="20200217140659868" tags="[[כאן בגטו]] מסעדות [[חיות אוכל]] מטבחים" title="מזנון">
 <pre>[img[pictures/miznon.jpg]]
 
 [[תומר]]:
 
-[[המזנון|https://miznon.com/]] שבתמונה, נמצא בקינג ג'ורג' 30, לא רחוק [[מ-420|420]] האהובה. לא הייתי באלה שבחו&quot;ל, וגם לא ברמת החייל, אבל הייתי לא פעם בסניף של אבן גבירול. הכל מאד טעים בפיתה ובמחיר הגיוני. אני הכי אוהב את כבדי התרנגולת או את מסבחת הלימה. [[ננו שלי|ננו שלי ואני]] אוהבת שורת בננות. יאמי מאד במזנונים של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]], ויש גם תפוח אדמה דרוס, גזוז או שפריץ, [[ועוד בתפריט|https://miznon.com/menu]], ומוזיקה, ועובדים מקסימים בקופה או במטבחים הפתוחים .. תענוג שהוא חובה.</pre>
+[[המזנון|https://miznon.com/]] שבתמונה, נמצא בקינג ג'ורג' 30, לא רחוק [[מ-420|420]] האהובה. לא הייתי באלה שבחו&quot;ל, וגם לא ברמת החייל, אבל הייתי לא פעם בסניף של אבן גבירול. הכל מאד טעים בפיתה ובמחיר הגיוני. אני הכי אוהב את כבדי התרנגולת או את מסבחת הלימה. [[ננו שלי|ננו שלי ואני]] אוהבת שורת בננות. יאמי מאד במזנונים של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]], ויש גם תפוח אדמה דרוס, גזוז או שפריץ, [[ועוד בתפריט|https://miznon.com/menu]], ומוזיקה, ועובדים מקסימים בקופה או במטבחים הפתוחים .. תענוג שהוא חובה.
+
+
+&lt;&lt;englink [[Miznon]]&gt;&gt;</pre>
 </div>
 <div created="20181209170135890" modified="20181210090806992" tags="[[כאן בגטו]] אימהות" title="מחאת הנשים">
 <pre>[img[pictures/mechaat-hanashim.jpg]]
