--- a/english.html
+++ b/english.html
@@ -515,6 +515,8 @@ Error message and password prompt
 
 <li>Scents</li>
 
+<li>Shoretzky</li>
+
 <li>Single parent children</li>
 
 <li>Six feet uner</li>
@@ -8480,7 +8482,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="420 Miznon [[Coen Sisters]]" title="$:/StoryList">
+<div list="Shoretzky [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9738,7 +9740,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217141506149" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217142449012" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10233,6 +10235,21 @@ Rosh Hashana 2017 was really something. Meaning, in the end of the day it was gr
 
 
  &lt;&lt;heblink [[ריחות]]&gt;&gt;</pre>
+</div>
+<div created="20200217142305955" modified="20200217143014956" tags="[[Here in the Ghetto]] [[Food addicts]]" title="Shoretzky">
+<pre>
+[img[pictures/shorezky.jpg]]
+
+!!![[Tomer]]:
+
+If it's not in [[Shoretzky|https://www.shoretzki.com/]], you don't need it!
+
+Out of the really nearby radius, on the other side of the boulevard, on the hillside of Sheinkin, there is the grocery store of the sweetest beloved by its parents, kids and employs family, one by one are remarkable and just fine, including the products that are organized on the shelves, including the deliveries, including the psychological therapy at the cashier. 
+
+
+ &lt;&lt;heblink [[שורצקי]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200212222159882" modified="20200215134519589" tags="[[True stories]] Children" title="Single parent children">
 <pre>[img[pictures/yeladim-chad.jpg]]
