--- a/index.html
+++ b/index.html
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217135122459" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217142330728" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9601,7 +9601,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217141619551" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217142618101" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -18384,14 +18384,18 @@ Fapina''
 
 </pre>
 </div>
-<div created="20180725153933793" modified="20180725164627521" tags="[[כאן בגטו]]" title="שורצקי">
+<div created="20180725153933793" modified="20200217142648063" tags="[[כאן בגטו]] [[חיות אוכל]]" title="שורצקי">
 <pre>[img[pictures/shorezky.jpg]]
 
 !!![[תומר]]:
 
 אם אין את זה //[[בשורצקי|https://www.shoretzki.com/]], לא צריך את זה!// 
 
-מחוץ לרדיוס הקרוב ממש, בצד השני של השדרה, במורד שינקין, נמצאת המכולת של המשפחה הכי חמודה ואוהבת על  הוריה וילדיה ועובדיה, אחד אחד משובחים ונבחרים, כולל המוצרים שמסודרים על המדפים, כולל המשלוחים, כולל טיפול פסיכולוגי אצל הקופאי/ת.</pre>
+מחוץ לרדיוס הקרוב ממש, בצד השני של השדרה, במורד שינקין, נמצאת המכולת של המשפחה הכי חמודה ואוהבת על  הוריה וילדיה ועובדיה, אחד אחד משובחים ונבחרים, כולל המוצרים שמסודרים על המדפים, כולל המשלוחים, כולל טיפול פסיכולוגי אצל הקופאי/ת.
+
+&lt;&lt;englink [[Shoretzky]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20190306171103506" modified="20190314145541129" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="שושני שמרים">
 <pre>[img[pictures/shoshanim.jpg]]
