--- a/english.html
+++ b/english.html
@@ -355,6 +355,8 @@ Error message and password prompt
 
 <li>Gabriel Fauré</li>
 
+<li>Galsi</li>
+
 <li>Gan-Ya</li>
 
 <li>Genevieve</li>
@@ -8482,7 +8484,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Shoretzky [[Coen Sisters]]" title="$:/StoryList">
+<div list="Galsi [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9296,6 +9298,18 @@ Likewise, she thinks that the widening gender-oriented spectrum, has to do with 
 
 </pre>
 </div>
+<div created="20200217143910012" modified="20200217144238477" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Galsi">
+<pre>
+[img[pictures/galsi.jpg]]
+
+!!![[Tomer]]:
+
+Need a document? Need to send a fax? Need a business card? Need to scan? Need a pencil? On the way to anywhere you can stop at [[Galsi|http://www.galsi.co.il/]]. 
+
+
+ &lt;&lt;heblink [[גלסי]]&gt;&gt;
+</pre>
+</div>
 <div created="20200215210632854" modified="20200215210740484" tags="[[On the road to somewhere]] [[A friend]] [[The archive's trustees]]" title="Gan-Ya">
 <pre>[img[pictures/gan-ya.jpg]]
 
@@ -9740,7 +9754,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217142449012" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217144147109" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
