--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="גלסי [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217142330728" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217143859279" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9601,7 +9601,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217142618101" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217144325572" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11684,12 +11684,17 @@ Is where I want to be
 
 אחת מתוך שתי תחנות רדיו מקומיות של [[מצפה ראשית]], שנמצאת [[בחנות הדיסקים|חנות דיסקים]].</pre>
 </div>
-<div created="20181005175015650" modified="20181008184446940" tags="[[כאן בגטו]]" title="גלסי">
+<div created="20181005175015650" modified="20200217144348070" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="גלסי">
 <pre>[img[pictures/galsi.jpg]]
 
 !!![[תומר]]:
 
-צריך מסמך? צריך לשלוח פקס? צריך כרטיסי ביקור? צריך לסרוק? צריך עיפרון? בדרך  לכל מקום  עוצרים [[בגלסי|http://www.galsi.co.il/]].</pre>
+צריך מסמך? צריך לשלוח פקס? צריך כרטיסי ביקור? צריך לסרוק? צריך עיפרון? בדרך  לכל מקום  עוצרים [[בגלסי|http://www.galsi.co.il/]].
+
+
+&lt;&lt;englink [[Galsi]]&gt;&gt;
+
+</pre>
 </div>
 <div created="20200208124810859" modified="20200212184700222" tags="[[בדרך לאן שהוא]] בתים כביסה [[מטא בדיון]]" title="גם אני מחנה">
 <pre>[img[pictures/gam-ani-machane.jpg]]
@@ -18384,7 +18389,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20180725153933793" modified="20200217142648063" tags="[[כאן בגטו]] [[חיות אוכל]]" title="שורצקי">
+<div created="20180725153933793" modified="20200217143839565" tags="[[כאן בגטו]] [[חיות אוכל]]" title="שורצקי">
 <pre>[img[pictures/shorezky.jpg]]
 
 !!![[תומר]]:
