--- a/english.html
+++ b/english.html
@@ -421,6 +421,8 @@ Error message and password prompt
 
 <li>Keep on bleeding</li>
 
+<li>Kiryat Sefer Park</li>
+
 <li>Kitchens</li>
 
 <li>Laundry</li>
@@ -8484,7 +8486,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Galsi [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9674,6 +9676,17 @@ Gura painted the [[drawing|To draw]] from [[this picture|https://res.cloudinary.
  &lt;&lt;heblink [[ממשיכים לדמם]]&gt;&gt;
 </pre>
 </div>
+<div created="20200217144732663" modified="20200217145443157" tags="[[Here in the Ghetto]] [[On the road to somewhere]]" title="Kiryat Sefer Park">
+<pre>
+[img[pictures/ginat-kiryat-sefer.jpg]]
+
+!!![[Tomer]]:
+
+Another [[neighborhood luck|https://www.google.co.il/maps/uv?hl=iw&amp;pb=!1s0x151d4b790ea21da7%3A0xa1f49b1fc4f87fc1!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMfT7kE3_Brr_MPEzP3k657iU-fSUS1t4DRdoz5%3Dw213-h160-k-no!5za2lyeWF0IHNlZmVyIHBhcmsgLSDXl9eZ16TXldepINeRLUdvb2dsZQ!15sCAQ&amp;imagekey=!1e10!2sAF1QipMfT7kE3_Brr_MPEzP3k657iU-fSUS1t4DRdoz5&amp;sa=X&amp;ved=2ahUKEwiquLyL6tjnAhXG_qQKHRQ4BWcQoiowFHoECA8QBg]] that exists thanks to the neighborhood's residents who stopped the building of another parking lot.
+
+
+ &lt;&lt;heblink [[גינת קריית ספר]]&gt;&gt;</pre>
+</div>
 <div created="20200212224246020" modified="20200213213226244" tags="Houses [[Food addicts]]" title="Kitchens">
 <pre>[img[pictures/kitchens.jpg]]
 
@@ -9754,7 +9767,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217144147109" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217144922607" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
