--- a/index.html
+++ b/index.html
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="גלסי [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217143859279" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217144754816" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9601,7 +9601,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217144325572" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217145015142" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -11633,12 +11633,16 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20180718190454440" modified="20200208125416517" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="גינת קריית ספר">
+<div created="20180718190454440" modified="20200217145040636" tags="[[כאן בגטו]] [[בדרך לאן שהוא]]" title="גינת קריית ספר">
 <pre>[img[pictures/ginat-kiryat-sefer.jpg]]
 
 !!![[תומר]]:
 
-עוד [[מזל שכונתי|https://he.wikipedia.org/wiki/%D7%92%D7%9F_%D7%A7%D7%A8%D7%99%D7%99%D7%AA_%D7%A1%D7%A4%D7%A8]] שקיים בזכות תושבי השכונה שעצרו בניית חניון נוסף. </pre>
+עוד [[מזל שכונתי|https://he.wikipedia.org/wiki/%D7%92%D7%9F_%D7%A7%D7%A8%D7%99%D7%99%D7%AA_%D7%A1%D7%A4%D7%A8]] שקיים בזכות תושבי השכונה שעצרו בניית חניון נוסף. 
+
+
+&lt;&lt;englink [[Kiryat Sefer Park]]&gt;&gt;
+</pre>
 </div>
 <div created="20180109154156686" modified="20200217120412807" tags="[[אירי טוענת]] [[בדרך לאן שהוא]] [[הכפר הגלובלי]]" title="גלגולים">
 <pre>[img[pictures/gilgulim.jpg]]
