--- a/english.html
+++ b/english.html
@@ -407,6 +407,8 @@ Error message and password prompt
 
 <li>James Gandolfini</li>
 
+<li>Jazz</li>
+
 <li>Jazz's mom</li>
 
 <li>Jeff Bridges</li>
@@ -477,6 +479,8 @@ Error message and password prompt
 
 <li>On the road to somewhere</li>
 
+<li>On the way to Sarona</li>
+
 <li>Once</li>
 
 <li>Outer sisters</li>
@@ -530,6 +534,8 @@ Error message and password prompt
 <li>Spike Lee</li>
 
 <li>Stories I`ve told Norma</li>
+
+<li>Tel Aviv Editorial</li>
 
 <li>The archive's trustees</li>
 
@@ -8477,7 +8483,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217141348601" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217151307493" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8486,7 +8492,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Tel Aviv Editorial]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8506,7 +8512,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217141122591" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217145610678" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9590,8 +9596,21 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
 </pre>
 </div>
-<div created="20200215152111069" modified="20200215155148510" tags="[[Here in the Ghetto]] Mothers Metafiction" title="Jazz's mom">
+<div created="20200217150536703" modified="20200217150654814" tags="[[Outer sisters]] [[Here in the Ghetto]] Music [[Coen sister]] [[A friend]] [[How many songs can you even invent at all]]" title="Jazz">
+<pre>
+[img[pictures/jazz.jpg]]
+
+
+
+ &lt;&lt;heblink [[Jazz]]&gt;&gt;</pre>
+</div>
+<div created="20200215152111069" modified="20200217150314661" tags="[[Here in the Ghetto]] Mothers Metafiction" title="Jazz's mom">
 <pre>[img[pictures/ima-shel-jazz.jpg]]
+
+
+!!![[Tomer]]:
+
+It's funny but just not so long ago I found out that [[Jazz's|Jazz]] mother used to work with me at the [[Television|Tel Aviv Editorial's garden]].
 
 
 
@@ -9767,7 +9786,7 @@ He really tried to be ok. His passiveness seethes me. He loves us, but our activ
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20200202180428182" modified="20200217144922607" tags="[[Life according to Genevieve]] Kitchens" title="Love">
+<div created="20200202180428182" modified="20200217152809838" tags="[[Life according to Genevieve]] Kitchens" title="Love">
 <pre>[img[pictures/ahava.jpg]]
 
 
@@ -10005,6 +10024,17 @@ Odelia is a K sister who trades art. She dresses super stylish, knows tantra, su
 
  &lt;&lt;heblink [[בדרך לאן שהוא]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200217152050036" modified="20200217152732091" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction" title="On the way to Sarona">
+<pre>
+[img[pictures/baderech-lesarona.jpg]]
+
+!!![[Tomer]]:
+
+Last week I went to meet a friend at [[Sarona|http://www.saronatlv.co.il/]], and on the passage from Haarbaah Street this is what I saw (the buildings on the middle are the [[Editorial RIP|Tel Aviv Editorial]])
+
+ &lt;&lt;heblink [[בדרך לשרונה]]&gt;&gt;
 </pre>
 </div>
 <div created="20200215161549719" modified="20200215162514105" tags="Children" title="Once">
@@ -10348,6 +10378,16 @@ And I say:
 
 
  &lt;&lt;heblink [[סיפורים שסיפרתי לנורמה]]&gt;&gt;
+
+</pre>
+</div>
+<div created="20200217151145172" modified="20200217152828816" tags="[[Here in the Ghetto]] Metafiction" title="Tel Aviv Editorial">
+<pre>
+[img[pictures/maarechet-tel-aviv.jpg]]
+
+
+
+ &lt;&lt;heblink [[מערכת תל אביב]]&gt;&gt;
 
 </pre>
 </div>
