--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Error message and password prompt
 
 <li>imagine</li>
 
-<li>jazz</li>
+<li>Jazz</li>
 
 <li>less is more</li>
 
@@ -9172,10 +9172,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20200217120132223" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/All</pre>
+<div created="20161023184709475" modified="20200217150815393" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217121014391" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217151112915" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9184,7 +9184,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[בדרך לשרונה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9204,7 +9204,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217144754816" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217152245234" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9427,7 +9427,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 &lt;&lt;englink [[Imagine]]&gt;&gt;
 </pre>
 </div>
-<div created="20171004154734427" modified="20200212143408070" tags="[[אחיות חוץ]] מוזיקה חבר [[כאן בגטו]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="jazz">
+<div created="20171004154734427" modified="20200217150800807" tags="[[אחיות חוץ]] מוזיקה חבר [[כאן בגטו]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="Jazz">
 <pre>[img[pictures/jazz.jpg]]
 
 !!![[הצוות]]:
@@ -9436,7 +9436,9 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 
 
-[[כאן|https://www.youtube.com/watch?v=FhlLAqa5eq8]] היא שרה עם בריל [[מפלא אוזן|פלא אוזן]]. </pre>
+[[כאן|https://www.youtube.com/watch?v=FhlLAqa5eq8]] היא שרה עם בריל [[מפלא אוזן|פלא אוזן]]. 
+
+&lt;&lt;englink [[Jazz]]&gt;&gt;</pre>
 </div>
 <div created="20170624105324019" modified="20200215231929867" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="less is more">
 <pre>[img[pictures/less-is-more.jpg]]
@@ -9587,12 +9589,12 @@ well,
 
 </pre>
 </div>
-<div created="20180912153229188" modified="20200208125150981" tags="[[כאן בגטו]] מוזיקה [[בדרך לאן שהוא]]" title="אברהם הוסטל">
+<div created="20180912153229188" modified="20200217150839269" tags="[[כאן בגטו]] מוזיקה [[בדרך לאן שהוא]]" title="אברהם הוסטל">
 <pre>[img[pictures/abraham-hostel.jpg]]
 
 !!![[תומר]]:
 
-שבועיים לפני, אשתי הנחמדת קנתה לה ולי כרטיסים להופעה של [[קותימן|https://kutiman.bandcamp.com/]] שהתקיימה בסוף יולי [[באברהם הוסטל|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], שזה מקום שאני תמיד אוהב ללכת אליו. בשעת האמת היא הייתה עייפה מידי, ומיד הזמנתי את שכנתי האהובה, (חוטא רגע בניים דרופינג), [[יסמין|jazz]], שהופיעה שם לפני כמה חודשים עם [[שלוש|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], לבוא איתי, והיא הייתה פנויה!! לקחנו מונית כי חם, והיה כיף חיים.</pre>
+שבועיים לפני, אשתי הנחמדת קנתה לה ולי כרטיסים להופעה של [[קותימן|https://kutiman.bandcamp.com/]] שהתקיימה בסוף יולי [[באברהם הוסטל|https://abrahamhostels.com/?gclid=EAIaIQobChMI_djYvui13QIVmKiaCh0GAAOpEAAYASAAEgISR_D_BwE]], שזה מקום שאני תמיד אוהב ללכת אליו. בשעת האמת היא הייתה עייפה מידי, ומיד הזמנתי את שכנתי האהובה, (חוטא רגע בניים דרופינג), [[יסמין|Jazz]], שהופיעה שם לפני כמה חודשים עם [[שלוש|https://www.youtube.com/watch?v=ZamQEe7_hdQ]], לבוא איתי, והיא הייתה פנויה!! לקחנו מונית כי חם, והיה כיף חיים.</pre>
 </div>
 <div created="20171207164711924" modified="20171208180406611" tags="[[הנחלה בה גדלתי]]" title="אדית">
 <pre>[img[pictures/edith-cohen.jpg]]
@@ -9601,7 +9603,7 @@ well,
 
 אדית היא [[חצי אחותי|עץ המשפחה של אווה]]. היא ברחה מהנחלה בה גדלנו שנה לפני, ונפגשנו שוב רק לפני שבע שנים. (עכשיו 2017) לפגוש אותה שוב היה אחד הדברים הנפלאים שקרו לי.</pre>
 </div>
-<div created="20170112164936113" modified="20200217145015142" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
+<div created="20170112164936113" modified="20200217152514394" tags="[[המטבח על פי ז'נבייב]] מטבחים" title="אהבה">
 <pre>[img[pictures/ahava.jpg]]
 
 !!![[ז'נבייב]]:
@@ -9621,12 +9623,12 @@ well,
 
 </pre>
 </div>
-<div created="20191110123155001" modified="20191111210823609" tags="[[אחיות חוץ]] [[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="אהל היפה">
+<div created="20191110123155001" modified="20200217150859261" tags="[[אחיות חוץ]] [[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="אהל היפה">
 <pre>[img[pictures/ahal-eden.jpg]]
 
 !!![[תומר]]:
 
-אהל היפה היא [[אהל עדן היפה|https://www.instagram.com/ahaleden/]] שגורה ציירה אותה בתמונה מהגב דווקא כי מי יכולה להיות עם [[הז'קט המושלם|https://en.wikipedia.org/wiki/Enter_the_Ninja]] באולם [[עוזי פרס ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A2%D7%95%D7%96%D7%99_%D7%A4%D7%A8%D7%A1]], ולך תדע איזה דבר הכי שיש היא תעשה אחר כך - לפחות נתקלתי בה [[בכולי עלמא|כולי עלמא]] בהופעה של [[ג'אז|jazz]], שהסתבר שהן משפחה, והיה לי העונג להתוודע אליה. אני קצת מאוהב, ואני חושב שהיא בהחלט אחת יחידה והכרחית כאן בגטו ולגטו שלנו המחייך.
+אהל היפה היא [[אהל עדן היפה|https://www.instagram.com/ahaleden/]] שגורה ציירה אותה בתמונה מהגב דווקא כי מי יכולה להיות עם [[הז'קט המושלם|https://en.wikipedia.org/wiki/Enter_the_Ninja]] באולם [[עוזי פרס ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A2%D7%95%D7%96%D7%99_%D7%A4%D7%A8%D7%A1]], ולך תדע איזה דבר הכי שיש היא תעשה אחר כך - לפחות נתקלתי בה [[בכולי עלמא|כולי עלמא]] בהופעה של [[ג'אז|Jazz]], שהסתבר שהן משפחה, והיה לי העונג להתוודע אליה. אני קצת מאוהב, ואני חושב שהיא בהחלט אחת יחידה והכרחית כאן בגטו ולגטו שלנו המחייך.
 
 
 
@@ -10200,12 +10202,12 @@ well,
 
 </pre>
 </div>
-<div created="20181107123350423" modified="20200215154548248" tags="[[כאן בגטו]] [[מטא בדיון]] אימהות" title="אימא של ג'אז">
+<div created="20181107123350423" modified="20200217150919248" tags="[[כאן בגטו]] [[מטא בדיון]] אימהות" title="אימא של ג'אז">
 <pre>[img[pictures/ima-shel-jazz.jpg]]
 
 !!![[תומר]]:
 
-מצחיק אבל רק לא מזמן גיליתי שאימא של [[ג'אז|jazz]] עבדה איתי [[בטלוויזיה|מערכת תל אביב]].
+מצחיק אבל רק לא מזמן גיליתי שאימא של [[ג'אז|Jazz]] עבדה איתי [[בטלוויזיה|מערכת תל אביב]].
 
 &lt;&lt;englink [[Jazz's mom]]&gt;&gt;</pre>
 </div>
@@ -10606,12 +10608,12 @@ well,
 
 נאדיה היא אשת עסקים מזן ה-K. היא נראית מבוגרת, ומתלבשת מבוגר וחום (פוליאסטר וטרילין), מתהדרת ביושר, בידע והבנת העולם. נשואה ובוגדנית.</pre>
 </div>
-<div created="20180825155311148" modified="20180826195747737" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
+<div created="20180825155311148" modified="20200217150936113" tags="מוזיקה [[כאן בגטו]] [[מטא בדיון]]" title="בארבי">
 <pre>[img[pictures/barby.jpg]]
 
 !!![[תומר]]: 
 
-בשבת לפני שבוע לקחתי מונית [[לבארבי|https://www.barby.co.il/]] לראות את [[jazz]] שהיא שכנתי האהובה, ובאמת עושר מוסיקלי היה [[בפסטיבל היפ הופ של ערב אחד|https://yuvalerel.com/2018/08/18/%d7%9e%d7%a1%d7%99%d7%91%d7%aa-%d7%94%d7%a9%d7%a7%d7%99%d7%a2%d7%94-%d7%a9%d7%9c-%d7%90%d7%9e%d7%a6%d7%a2-%d7%94%d7%9c%d7%99%d7%9c%d7%94/]]. (הקישור הזה לכתבה על הפסטיבל הכוללת גם קטעי וידאו לקוח [[מהבלוג של יובל אראל|https://yuvalerel.com/]], שאוהב ומתעד מוסיקה). ג'אז שהיא יסמין היקרה, הופיעה עם הרכב שנקרא שאזאמאט, אחלה חבורה של בחורים שמנגנים ושרים יפה וכיף. הם ניגנו איתה יפה מאד שיר שלה וקצת יותר מאוחר היא הופיעה עם השירים שלה מלווה בכוכב [[שי טרא ליטמן]]. היה מעולה.
+בשבת לפני שבוע לקחתי מונית [[לבארבי|https://www.barby.co.il/]] לראות את [[Jazz]] שהיא שכנתי האהובה, ובאמת עושר מוסיקלי היה [[בפסטיבל היפ הופ של ערב אחד|https://yuvalerel.com/2018/08/18/%d7%9e%d7%a1%d7%99%d7%91%d7%aa-%d7%94%d7%a9%d7%a7%d7%99%d7%a2%d7%94-%d7%a9%d7%9c-%d7%90%d7%9e%d7%a6%d7%a2-%d7%94%d7%9c%d7%99%d7%9c%d7%94/]]. (הקישור הזה לכתבה על הפסטיבל הכוללת גם קטעי וידאו לקוח [[מהבלוג של יובל אראל|https://yuvalerel.com/]], שאוהב ומתעד מוסיקה). ג'אז שהיא יסמין היקרה, הופיעה עם הרכב שנקרא שאזאמאט, אחלה חבורה של בחורים שמנגנים ושרים יפה וכיף. הם ניגנו איתה יפה מאד שיר שלה וקצת יותר מאוחר היא הופיעה עם השירים שלה מלווה בכוכב [[שי טרא ליטמן]]. היה מעולה.
 
 
 
@@ -10682,12 +10684,14 @@ well,
 
 </pre>
 </div>
-<div created="20181026164230759" modified="20200208125301990" tags="[[כאן בגטו]] [[מטא בדיון]] [[בדרך לאן שהוא]]" title="בדרך לשרונה">
+<div created="20181026164230759" modified="20200217152543966" tags="[[כאן בגטו]] [[מטא בדיון]] [[בדרך לאן שהוא]]" title="בדרך לשרונה">
 <pre>[img[pictures/baderech-lesarona.jpg]]
 
 !!![[תומר]]:
 
-בשבוע שעבר הלכתי להיפגש עם חבר [[בשרונה|http://www.saronatlv.co.il/]], ובמעבר [[מרחוב הארבעה|https://he.wikipedia.org/wiki/%D7%A8%D7%97%D7%95%D7%91_%D7%94%D7%90%D7%A8%D7%91%D7%A2%D7%94]] זה מה שראיתי (הבניינים באמצע הם [[המערכת ז&quot;ל|מערכת תל אביב]]).</pre>
+בשבוע שעבר הלכתי להיפגש עם חבר [[בשרונה|http://www.saronatlv.co.il/]], ובמעבר [[מרחוב הארבעה|https://he.wikipedia.org/wiki/%D7%A8%D7%97%D7%95%D7%91_%D7%94%D7%90%D7%A8%D7%91%D7%A2%D7%94]] זה מה שראיתי (הבניינים באמצע הם [[המערכת ז&quot;ל|מערכת תל אביב]]).
+
+&lt;&lt;englink [[On the way to Sarona]]&gt;&gt;</pre>
 </div>
 <div created="20170425194155286" modified="20200213215353015" tags="[[קופים ממונעים]] הצוות" title="בחוות החיות">
 <pre>[img[pictures/bechavat-hachayot.jpg]]
@@ -12842,12 +12846,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 השביל היפה הזה נמצא  בצידו המזרחי של האילון, והוא השביל של אריאלה, חברתי [[מהעבודה באולפן|מערכת תל אביב]]</pre>
 </div>
-<div created="20181101155948399" modified="20190617133654637" tags="[[כאן בגטו]] [[חיות אוכל]] מוזיקה [[מטא בדיון]] מטבחים" title="התדר בואך רומנו">
+<div created="20181101155948399" modified="20200217151022364" tags="[[כאן בגטו]] [[חיות אוכל]] מוזיקה [[מטא בדיון]] מטבחים" title="התדר בואך רומנו">
 <pre>[img[pictures/teder-romano.jpg]]
 
 !!![[תומר]]:
 
-התדר ורומנו נמצאים [[בבית רומנו|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%AA_%D7%A8%D7%95%D7%9E%D7%A0%D7%95_(%D7%AA%D7%9C_%D7%90%D7%91%D7%99%D7%91)]] שבדרך יפו- תל אביב, וגם לשם היגעתי בכמה הזדמנויות בעיקר כדי לראות את [[jazz]]. [[לתדר|https://teder.fm/]], רדיו שבחסותו נערכים מופעים בחצר הבניין השווה ביותר, צמודה פיצה שווה של [[רומנו|https://www.tripadvisor.co.il/Restaurant_Review-g293984-d8545357-Reviews-Romano-Tel_Aviv_Tel_Aviv_District.html]]. שבקומה השנייה הוא מסעדה - מהמקומות של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] וכנופייתו, שמסעדותיו  טובות הווייב וטעם עושות כאן כיף. פעילויות רבות שיתוף, מסתבר, קורות שם גם עם הסוזי ועוד. תענוג שמח כל הסיפור הזה.</pre>
+התדר ורומנו נמצאים [[בבית רומנו|https://he.wikipedia.org/wiki/%D7%91%D7%99%D7%AA_%D7%A8%D7%95%D7%9E%D7%A0%D7%95_(%D7%AA%D7%9C_%D7%90%D7%91%D7%99%D7%91)]] שבדרך יפו- תל אביב, וגם לשם היגעתי בכמה הזדמנויות בעיקר כדי לראות את [[Jazz]]. [[לתדר|https://teder.fm/]], רדיו שבחסותו נערכים מופעים בחצר הבניין השווה ביותר, צמודה פיצה שווה של [[רומנו|https://www.tripadvisor.co.il/Restaurant_Review-g293984-d8545357-Reviews-Romano-Tel_Aviv_Tel_Aviv_District.html]]. שבקומה השנייה הוא מסעדה - מהמקומות של [[אייל שני|https://he.wikipedia.org/wiki/%D7%90%D7%99%D7%99%D7%9C_%D7%A9%D7%A0%D7%99]] וכנופייתו, שמסעדותיו  טובות הווייב וטעם עושות כאן כיף. פעילויות רבות שיתוף, מסתבר, קורות שם גם עם הסוזי ועוד. תענוג שמח כל הסיפור הזה.</pre>
 </div>
 <div created="20170602111237129" modified="20200213171027914" tags="[[אחיות חוץ]] מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="וויקליף ז'אן">
 <pre>[img[pictures/wyclef-jean.jpg]]
@@ -14127,12 +14131,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[9-side-wishing-star]]&gt;&gt;</pre>
 </div>
-<div created="20191107114444294" modified="20200212144047103" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="כולי עלמא">
+<div created="20191107114444294" modified="20200217151039536" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]] [[כמה שירים כבר אפשר להמציא בכלל]]" title="כולי עלמא">
 <pre>[img[pictures/kuli-alma.jpg]]
 
 !!![[תומר]]:
 
-ככה זה כשאדם הולך אחרי [[הג'אז|jazz]] - הוא מגיע למקווה ישראל עשר ונכנס מהרחוב [[לכולי עלמא|https://kulialma.com/]], פונה שמאלה ויורד במדרגות שמובילות למקום המקסים והצבעוני שהוא אוהב, קונה לעצמו ברד אננס וודקה, רואה אנשים צעירים מבלים, שמח בחלקו, ההופעה של ג'אז מתחילה והיא נפלאה זועמת וצוחקת וחכמה ויפה וכובשת והשירים.. וואו, ופוגש את [[אהל היפה]], קונים עוד דרינק, מדברים, וחוזר מבסוט [[לננו הקטנה|ננו שלי ואני]] שלי שחגגה יומיים לפני יום הולדת שנתיים.
+ככה זה כשאדם הולך אחרי [[הג'אז|Jazz]] - הוא מגיע למקווה ישראל עשר ונכנס מהרחוב [[לכולי עלמא|https://kulialma.com/]], פונה שמאלה ויורד במדרגות שמובילות למקום המקסים והצבעוני שהוא אוהב, קונה לעצמו ברד אננס וודקה, רואה אנשים צעירים מבלים, שמח בחלקו, ההופעה של ג'אז מתחילה והיא נפלאה זועמת וצוחקת וחכמה ויפה וכובשת והשירים.. וואו, ופוגש את [[אהל היפה]], קונים עוד דרינק, מדברים, וחוזר מבסוט [[לננו הקטנה|ננו שלי ואני]] שלי שחגגה יומיים לפני יום הולדת שנתיים.
 
 
 
@@ -15139,12 +15143,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;englink [[Miznon]]&gt;&gt;</pre>
 </div>
-<div created="20181209170135890" modified="20181210090806992" tags="[[כאן בגטו]] אימהות" title="מחאת הנשים">
+<div created="20181209170135890" modified="20200217151053687" tags="[[כאן בגטו]] אימהות" title="מחאת הנשים">
 <pre>[img[pictures/mechaat-hanashim.jpg]]
 
 !!![[תומר]]:
 
-אחרי שבצהריים ראינו את [[ג'אז|jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב. ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והלכנו לככר רבין, שם המשיכה המחאה הבוערת של הנשים, (אלה [[ששמות לב|היסטריות]] לכל פרט). הן אירגנו הפגנה מקסימה ולמופת. </pre>
+אחרי שבצהריים ראינו את [[ג'אז|Jazz]] שרה בארועי המחאה ברוטשילד, הגיע הערב. ארזתי טוב טוב את [[ננו הקטנה|ננו שלי ואני]], והלכנו לככר רבין, שם המשיכה המחאה הבוערת של הנשים, (אלה [[ששמות לב|היסטריות]] לכל פרט). הן אירגנו הפגנה מקסימה ולמופת. </pre>
 </div>
 <div created="20170425201738858" modified="20200215101632828" tags="[[בחוות החיות]]" title="מחלקים סלולרים">
 <pre>[img[pictures/mechalkim-nayadim.jpg]]
@@ -15389,12 +15393,15 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 בקצה החלל הפתוח יש חדר אוכל צבעוני, גם בו נוהגים העובדים לשבת ולעבוד.</pre>
 </div>
-<div created="20181026164355462" modified="20181107111246604" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
+<div created="20181026164355462" modified="20200217152941848" tags="[[כאן בגטו]] [[מטא בדיון]]" title="מערכת תל אביב">
 <pre>[img[pictures/maarechet-tel-aviv.jpg]]
 
 !!![[תומר]]:
 
-כשהייתי סטודנט, עבדתי כמאבטח בחצר המערכת. חצר נפלאה שנראית כמו קיבוץ ישן מלא עצים ובתים נמוכים חלקם לשימור, וממוקמת סמוך [[לשרונה|בדרך לשרונה]]. לפעמים כשהיה צורך עליתי לעבוד [[ברוממה|רוממה]], ודי מהר היכרתי, (כמו כל המאבטחים), את עובדי הרשות מקטן ועד גדול. מפה לשם מי שהיה אחראי על עובדי האולפן הציע לי לעבוד כ cg, שזה אותו אחד שכותב את הכותרות והכיתובים והקרדיטים שנראים על המסך. בהמשך הציעו לי להיות [[נתב]], וכך העברתי תשע שנים מחיי בעבודת אולפן לא רעה בכלל - עד שסגרו עלינו את המסך באיבחה באמצע מאי 2017. היה לא מכבד. את הצילום ממנו ציירה גורה צילמתי בשנה שעברה מאחורי הגדר בדרכי לחתום בלשכת התעסוקה.</pre>
+כשהייתי סטודנט, עבדתי כמאבטח בחצר המערכת. חצר נפלאה שנראית כמו קיבוץ ישן מלא עצים ובתים נמוכים חלקם לשימור, וממוקמת סמוך [[לשרונה|בדרך לשרונה]]. לפעמים כשהיה צורך עליתי לעבוד [[ברוממה|רוממה]], ודי מהר היכרתי, (כמו כל המאבטחים), את עובדי הרשות מקטן ועד גדול. מפה לשם מי שהיה אחראי על עובדי האולפן הציע לי לעבוד כ cg, שזה אותו אחד שכותב את הכותרות והכיתובים והקרדיטים שנראים על המסך. בהמשך הציעו לי להיות [[נתב]], וכך העברתי תשע שנים מחיי בעבודת אולפן לא רעה בכלל - עד שסגרו עלינו את המסך באיבחה באמצע מאי 2017. היה לא מכבד. את הצילום ממנו ציירה גורה צילמתי בשנה שעברה מאחורי הגדר בדרכי לחתום בלשכת התעסוקה.
+
+
+&lt;&lt;englink [[Tel Aviv Editorial]]&gt;&gt;</pre>
 </div>
 <div created="20170422190532804" modified="20190617134421789" tags="[[חלומות שחלמנו]] מטבחים" title="מפעיל יד">
 <pre>[img[pictures/mafil-yad.jpg]]
@@ -17948,12 +17955,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181223141707382" modified="20191113141725371" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="רדיו epgb">
+<div created="20181223141707382" modified="20200217151109444" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="רדיו epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
 
 !![[תומר]]:
 
-אני אוהב מקומות סמויים מן העין, שנפתחים רק כשכבר חשוך, כמו [[הרדיו|https://www.timeout.com/israel/nightlife/radio-epgb]], שנמצא בשד&quot;ל 7. נכנסים ויורדים לבר החשוך והטוב, ולמוזיקה המזיזה והנוגעת, ולאווירה. אם זה קורה בימי שלישי תהנו מליין קטלן [[שג'אז|jazz]], שאני, כידוע, גרופי שלה, אחראית עליו ומופיעה בו - וגם בשאר הימים [[שווה לבדוק|https://www.tripadvisor.com/Attraction_Review-g293984-d3584847-Reviews-Radio_E_P_G_B-Tel_Aviv_Tel_Aviv_District.html]].
+אני אוהב מקומות סמויים מן העין, שנפתחים רק כשכבר חשוך, כמו [[הרדיו|https://www.timeout.com/israel/nightlife/radio-epgb]], שנמצא בשד&quot;ל 7. נכנסים ויורדים לבר החשוך והטוב, ולמוזיקה המזיזה והנוגעת, ולאווירה. אם זה קורה בימי שלישי תהנו מליין קטלן [[שג'אז|Jazz]], שאני, כידוע, גרופי שלה, אחראית עליו ומופיעה בו - וגם בשאר הימים [[שווה לבדוק|https://www.tripadvisor.com/Attraction_Review-g293984-d3584847-Reviews-Radio_E_P_G_B-Tel_Aviv_Tel_Aviv_District.html]].
 
 &lt;&lt;englink [[Radio epgb]]&gt;&gt;
 </pre>
