--- a/english.html
+++ b/english.html
@@ -8483,7 +8483,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200217125807877" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200217151307493" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200217161235825" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -8492,7 +8492,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Tel Aviv Editorial]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8512,7 +8512,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200217145610678" title="$:/temp/search">
+<div created="20161023184814872" modified="20200217161144156" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9604,13 +9604,13 @@ The beloved [[James Gandolfini|https://www.imdb.com/name/nm0001254/]], who gave 
 
  &lt;&lt;heblink [[Jazz]]&gt;&gt;</pre>
 </div>
-<div created="20200215152111069" modified="20200217150314661" tags="[[Here in the Ghetto]] Mothers Metafiction" title="Jazz's mom">
+<div created="20200215152111069" modified="20200217161203892" tags="[[Here in the Ghetto]] Mothers Metafiction TV" title="Jazz's mom">
 <pre>[img[pictures/ima-shel-jazz.jpg]]
 
 
 !!![[Tomer]]:
 
-It's funny but just not so long ago I found out that [[Jazz's|Jazz]] mother used to work with me at the [[Television|Tel Aviv Editorial's garden]].
+It's funny but just not so long ago I found out that [[Jazz's|Jazz]] mother used to work with me at the [[Television|Tel Aviv Editorial]].
 
 
 
@@ -10026,7 +10026,7 @@ Odelia is a K sister who trades art. She dresses super stylish, knows tantra, su
 
 </pre>
 </div>
-<div created="20200217152050036" modified="20200217152732091" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction" title="On the way to Sarona">
+<div created="20200217152050036" modified="20200217161226311" tags="[[Here in the Ghetto]] [[On the road to somewhere]] Metafiction" title="On the way to Sarona">
 <pre>
 [img[pictures/baderech-lesarona.jpg]]
 
@@ -10381,9 +10381,14 @@ And I say:
 
 </pre>
 </div>
-<div created="20200217151145172" modified="20200217152828816" tags="[[Here in the Ghetto]] Metafiction" title="Tel Aviv Editorial">
+<div created="20200217151145172" modified="20200217161018161" tags="[[Here in the Ghetto]] Metafiction" title="Tel Aviv Editorial">
 <pre>
 [img[pictures/maarechet-tel-aviv.jpg]]
+
+
+!!![[Tomer]]:
+
+When I was a student, I used to work as a security guard at the Editorial's yard. A wonderful garden that looked like an old village full of trees and short houses, some for preservation, who was located near [[Sarona|On the way to Sarona]].  Sometimes when there was anecessity I went up to work at [[Romema]], and pretty fast I got familiar (like any other guard) with the * staff. Meanwhile, the one that was in charge of the studio employs offered me to work as a cg, the one who writes the headlines, the captions and the credits that are on the screen. Later, they offered me to be a *, and that's how I spent nine years of my life in a pretty good studio job, until they shut us down at once, in the middle of May  2017. It was disrespectful. The photo which Gura's painting is based on, was taken by me last year behind the fence, on my way to sign at the employment bureau.
 
 
 
@@ -10636,7 +10641,7 @@ In the animal farm'', they make an effort not to exaggerate with the freedom of 
 
  &lt;&lt;heblink [[לצייר]]&gt;&gt;</pre>
 </div>
-<div created="20200202164522080" modified="20200215173631203" tags="[[A friend]] [[Coen sister]]" title="Tomer">
+<div created="20200202164522080" modified="20200217161139999" tags="[[A friend]] [[Coen sister]]" title="Tomer">
 <pre>[img[pictures/tomer.jpg]]
 
 
